# IA_motor

./: CMakeLists.txt  README.md  TensorSimple.cpp
examples/: basic_training.cpp  basic_usage.cpp  polymorphic_usage.cpp
include/nevrocpp/: Activation.hpp  Layer.hpp  Loss.hpp
include/nevrocpp/core/: Tensor.hpp
include/nevrocpp/layers/: ReLU.hpp
include/nevrocpp/losses/: MSE.hpp
src/core/: Tensor.cpp
src/layers/: ReLU.cpp
src/losses/: MSE.cpp
tests/: CMakeLists.txt  test_relu.cpp  test_tensor.cpp
